netflix-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix-service
spec:
  selector:
    app: netflix-pod
  ports:
  - port: 3081
    targetPort: 80
