netflix-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-ingress
  labels:
    name: netflix-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: netflix.sherawat.cloud
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: netflix-service
            port: 
              number: 3081
